<resources>
    <string name="app_name">Spoon Pot</string>
    <string name="facebook_app_id">229927777473591</string>
    <string name="title_activity_maps">Map</string>
    <string name="error_login_pass">Contraseña Incorrecta</string>
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="error_user">Un usuario con este correo electrónico ya existe</string>
    <string name="error_mail">Ingrese un Email Valido</string>
    <string name="error_pass">Ingrese Contraseña</string>
    <string name="error_repass">Confirmar Contraseña distinto</string>
    <string name="auth">Autenticando</string>
    <string name="user_create">Usuario creado \n Por Favor Valide su email</string>
    <string name="error">Error</string>
    <string name="permissions">La Aplicación Necesita de permisos</string>
    <string name="email">Correo</string>
    <string name="pass">Contraseña</string>
    <string name="repass">Repetir Contraseña</string>
    <string name="recovery">Recuperar Contraseña</string>
    <string name="login_twitter">Inicia sesión con Twitter</string>
    <string name="login_facebook">Inicia sesión con Facebook</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register">Guardar</string>
    <string name="error_email">Para acceder a la aplicacion \n Primero verifique su email!!!</string>
    <string name="add">Agregar</string>
    <string name="favorite">Favorito</string>
    <string name="location">Localización</string>
    <string name="search">Busqueda</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="yes">SI</string>
    <string name="no">NO</string>
    <string name="exit">Esta seguro que desea salir?</string>
    <string name="espanol">Español</string>
    <string name="english">Inglés</string>
    <string name="help">Ayuda</string>
    <string name="config">Ajustes</string>
    <string name="share">Compartir APP</string>
    <string name="share22">Facebook</string>
    <string name="share23">Email</string>
    <string name="share24">Whatapp</string>
    <string name="share25">SMS</string>
    <string name="spoot">¿Qué es Spoot Pot?</string>
    <string name="what">¿Cómo Compartir Comida?</string>
    <string name="terminos">Términos y condiciones</string>
    <string name="condition">Políticas de prívacidad</string>
    <string name="condition1">Spoon Pot es una empresa comprometida con la privacidad de sus miembros, por lo cual solo tú puedes controlar con quien compartir cualquier información guardada en este sitio, conforme a las configuraciones de privacidad que tengas en tu perfil. Tu nombre de usuario, así como tu foto de perfil serán visibles por todos los usuarios de Soon Pot.\n\r\n

Spoon Pot podrá pedirte datos personales, así como dirección, número de teléfono, nombre, edad, con el fin ofrecer un mejor servicio a todos nuestros miembros, esta información podrá ser compartida a terceros, sean anunciantes nuestros o no para que estos ofrezcan sus servicios, ofertas, promociones u otro tipo de información relacionada o no al servicio que se ofrece en Spoon pot.\n\r\n

Con respecto a las visitas que hagas a nuestra página, aplicación podremos recoger, de acuerdo con la legislación aplicable y , cuando así sea necesario, con tu consentimientos, información referente a los dispositivos que empleas y las redes a las que te conectas cuando haces uso de nuestros servicios. Esto puede incluir por ejemplo pero sin limitación: tu dirección IP, información de conexión, tipo y versión de navegador, tipos y versiones de los plugins o complementos de tu navegador sistema operativo y plataforma información sobre tu visita incluido el historial detallado de la url, a través y desde nuestra página y aplicación, productos que hayas visto o buscado, errores de descarga duración de las visitas a determinadas páginas, interacciones con la página.\n\r\n

Podríamos utilizar cookies para localizar tu posición y así mostrarte opciones de personas que estén cercanas a tu posición.\n\r\n
</string>
    <string name="iniciar">Inicia sesión con:</string>
    <string name="or">O</string>
    <string name="login_mail">Inicia sesión con tu email</string>
    <string name="help1">QUIERO FORMAR PARTE DE SPOON POT...\n¿QUÉ TENGO QUE HACER?</string>
    <string name="help2">Es tan sencillo como entrar y registrarse. Una vez que formes parte de Spoon Pot podrás tanto convertirte en cocinero y compartir tus platos, como degustar los platos que se ofrecen de otros cocineros. ¡Tú decides!</string>
    <string name="help3">UNA COMUNIDAD CERCANA Y DE CONFIANZA</string>
    <string name="help4">En Spoon Pot los usuarios eligen qué platos ofrecer y a quién. Es una plataforma en la que buscamos que los usuarios ganen en comodidad y calidad de vida, ahorrando dinero y tiempo.\n\r\nPor otra parte, los usuarios deben dejar una valoración del servicio que han recibido para que otros usuarios puedan elegir con quién compartir comida. Además, todo el contenido publicado por los usuarios podrá ser moderado por Spoon Pot para mejorar el servicio y que todo vaya como la seda.</string>
</resources>